kubernetes/apps/selfhosted/homepage/app/networkpolicy.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: homepage
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: homepage

  egress:
    - toEndpoints:
        - matchLabels:
            ingress.home.arpa/homepage: allow
          matchExpressions:
            - key: io.kubernetes.pod.namespace
              operator: Exists # any namespace

# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
---
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: homepage-to-app
spec:
  description: "Permit ingress from Homepage to apps"
  endpointSelector:
    matchLabels:
      ingress.home.arpa/homepage: allow

  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: homepage
            io.kubernetes.pod.namespace: selfhosted
